Minor fix on mobile view

--- a/css/selvmade.css
+++ b/css/selvmade.css
@@ -76,7 +76,7 @@ p {
 
   h2 {
       font-family: Cambay;
-      font-size: 3em;
+      font-size: 4em;
       font-weight: bold;
       margin-bottom: 1em;
       margin-top: 0.5em;
@@ -84,7 +84,7 @@ p {
 
   p {
      font-family: Raleway;
-     font-size: 2em;
+     font-size: 2.5em;
      line-height: 2em;
   }
 
@@ -101,6 +101,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     padding-left: 0;
+    margin-bottom: 5em;
   }
 
   .outer {
